--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Short stories, Spanish'
 - !lcsh 'Spanish fiction -- 20th century'
 - !lcc 'PQ'
+- GITenberg
 tableOfContents: 'La niña mimosa -- Tu llanto y mi risa -- El oro inglés -- Paraíso
   perdido: recuerdos de Mindanao -- La primera conquista -- La tempestad -- Paga anticipada
   -- La toga -- Por ahí -- El suceso del día -- Mi prima me odia -- El recuerdo --
